--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/drone.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/drone.yml
@@ -125,6 +125,7 @@
     - WallXenoResin
     - WallXenoMembrane
     - DoorXenoResin
+    - StickyResin
 
 - type: entity
   parent: CMXenoDroneBase
