--- a/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_sticky_resin.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_sticky_resin.yml
@@ -1,7 +1,52 @@
-- type: Entity
+- type: entity
   id: StickyResin
-  description: "A layer of disgusting sticky slime."
+  name: sticky resin
+  description: A layer of disgusting sticky slime.
   placement:
     mode: SnapgridCenter
     snap:
     - Wall
+  components:
+  - type: Transform
+    anchored: true
+  - type: Physics
+    bodyType: Static
+  - type: Fixtures
+    fixtures:
+      fix1:
+        shape:
+          !type:PhysShapeAabb
+          bounds: "-0.45,-0.45,0.45,0.45"
+        layer:
+        - SlipLayer
+        mask:
+        - ItemMask
+        density: 1000
+        hard: false
+  - type: Clickable
+  - type: Sprite
+    sprite: _RMC14/Structures/Xenos/xeno_sticky_resin.rsi
+    drawdepth: FloorTiles
+    layers:
+    - state: sticky_resin
+  - type: Icon
+    sprite: _RMC14/Structures/Xenos/xeno_sticky_resin.rsi
+    state: sticky_resin
+  - type: XenoFriendly
+  - type: XenoNestSurface
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 45
+      behaviors:
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+  - type: XenoConstructionPlasmaCost
+    plasma: 55
+  - type: SpeedModifierContacts
+    walkSpeedModifier: 0.2
+    sprintSpeedModifier: 0.2
+    ignoreWhitelist:
+      components:
+        - Xeno
